# Optic-Gamma-Scintillator-with-aluminium--Geant4

./: CMakeLists.txt  README.md  sim.cc
include/: PMActionInitialization.hh  PMDetectorConstruction.hh  PMEventAction.hh  PMPrimaryGenerator.hh  PMRunAction.hh  PMSensitiveDetector.hh  PMSteppingAction.hh
macros/: run.mac  vis.mac
src/: PMActionInitialization.cc  PMDetectorConstruction.cc  PMEventAction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMRunAction.cc  PMSensitiveDetector.cc  PMSteppingAction.cc
